--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,9 @@ body {
 	font-size: 16px;
 	color: #222;
 	background-color: #ECF0F1;
-	text-align: center;
-}
+  max-width: 640px;
+  margin: 0 auto;
+	
 
 .container {
 	padding: 0;
